# kagurarr

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Plan.md  README.md  config.example.toml  docker-compose.yml
src/: blacklist.rs  config.rs  lidarr.rs  main.rs  scorer.rs  slskd.rs  sync.rs
