[package]
name = "kagurarr"
version = "0.1.4"
edition = "2021"
description = "lidarr + soulseek bridge."
license = "Apache-2.0"

[[bin]]
name = "kagurarr"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# http
reqwest = { version = "0.12", features = ["json"] }

# sqlite blacklist
rusqlite = { version = "0.31", features = ["bundled"] }

# config + serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# error handling
anyhow = "1"

# string similarity (sequence_matcher equivalent)
strsim = "0.11"

# uuid for slskd search IDs
uuid = { version = "1", features = ["v4"] }

# timestamps
chrono = { version = "0.4", features = ["serde"] }

# audio tag writing (for stamping albumartist/album before lidarr import)
lofty = "0.24"
